{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 44,
  "lineage": "f1c7383b-81ba-2fb9-8add-7c6edb723f28",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160092099172:vpc/vpc-4ec4cc2b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-d1709fb8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-d94abcbc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-4ec4cc2b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-79dc281d",
            "owner_id": "160092099172",
            "region": "us-east-1",
            "tags": {
              "CloudResourceTerminator": "Exempt",
              "kubernetes.io/cluster/sandbox-ers-eks-test": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160092099172:security-group/sg-01a02dc5bb7cdc1a8",
            "description": "Allow all traffic between instances in the same VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a02dc5bb7cdc1a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow_all_inside_vpc",
            "name_prefix": "",
            "owner_id": "160092099172",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_inside_vpc"
            },
            "tags_all": {
              "Name": "allow_all_inside_vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-4ec4cc2b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160092099172",
            "id": "sg-01a02dc5bb7cdc1a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160092099172:security-group/sg-04c1a219f3947de18",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c1a219f3947de18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "160092099172",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-4ec4cc2b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160092099172",
            "id": "sg-04c1a219f3947de18",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.control_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0012dad04fbe3d7",
            "arn": "arn:aws:ec2:us-east-1:160092099172:instance/i-0e6df0389077f853e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6df0389077f853e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "michal_cyliowski_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07da5b19691af7151"
              }
            ],
            "primary_network_interface_id": "eni-07da5b19691af7151",
            "private_dns": "ip-172-31-65-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.65.146",
            "public_dns": "ec2-34-238-248-228.compute-1.amazonaws.com",
            "public_ip": "34.238.248.228",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:160092099172:key/2f2590db-d697-457d-8df8-4680357a19e3",
                "throughput": 125,
                "volume_id": "vol-0d7111b9e2b93ca09",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_inside_vpc",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1656c673",
            "tags": {
              "Environment": "dev",
              "Name": "control-node",
              "Role": "ansible-master"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "control-node",
              "Role": "ansible-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a02dc5bb7cdc1a8",
              "sg-04c1a219f3947de18"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160092099172",
            "id": "i-0e6df0389077f853e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all_traffic",
            "aws_security_group.ssh",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.managed_node_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0012dad04fbe3d7",
            "arn": "arn:aws:ec2:us-east-1:160092099172:instance/i-041286cc5df90bee5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041286cc5df90bee5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "michal_cyliowski_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0da6dd9bc2eb90ab8"
              }
            ],
            "primary_network_interface_id": "eni-0da6dd9bc2eb90ab8",
            "private_dns": "ip-172-31-69-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.69.138",
            "public_dns": "ec2-3-235-5-118.compute-1.amazonaws.com",
            "public_ip": "3.235.5.118",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:160092099172:key/2f2590db-d697-457d-8df8-4680357a19e3",
                "throughput": 125,
                "volume_id": "vol-083dbc87d6771b8d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_inside_vpc",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1656c673",
            "tags": {
              "Environment": "dev",
              "Name": "managed-node-1",
              "Role": "ansible-node"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "managed-node-1",
              "Role": "ansible-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a02dc5bb7cdc1a8",
              "sg-04c1a219f3947de18"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160092099172",
            "id": "i-041286cc5df90bee5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all_traffic",
            "aws_security_group.ssh",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.managed_node_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b0012dad04fbe3d7",
            "arn": "arn:aws:ec2:us-east-1:160092099172:instance/i-0ad60cb767a973194",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad60cb767a973194",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "michal_cyliowski_test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03e4967c8eab481fa"
              }
            ],
            "primary_network_interface_id": "eni-03e4967c8eab481fa",
            "private_dns": "ip-172-31-67-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.67.235",
            "public_dns": "ec2-44-223-79-156.compute-1.amazonaws.com",
            "public_ip": "44.223.79.156",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:160092099172:key/2f2590db-d697-457d-8df8-4680357a19e3",
                "throughput": 125,
                "volume_id": "vol-0795ad9ffa56938e7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_inside_vpc",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1656c673",
            "tags": {
              "Environment": "dev",
              "Name": "managed-node-2",
              "Role": "ansible-node"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "managed-node-2",
              "Role": "ansible-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a02dc5bb7cdc1a8",
              "sg-04c1a219f3947de18"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160092099172",
            "id": "i-0ad60cb767a973194",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all_traffic",
            "aws_security_group.ssh",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}